update all BB links

--- a/content/news/2013-08-16-lenskit-2.0-M1.md
+++ b/content/news/2013-08-16-lenskit-2.0-M1.md
@@ -10,7 +10,7 @@ backwards compatibility; projects using LensKit will need notable upgrades for L
 
 The [release notes](http://dev.grouplens.org/lenskit/lenskit2//releases/lenskit-2.0.html) contain
 a number of the changes; the
-[change log](https://bitbucket.org/grouplens/lenskit/commits/branch/lenskit2) is the definitive
+[change log](https://github.com/grouplens/lenskit/commits/branch/lenskit2) is the definitive
 source of change information.
 
 ## Data Structure Cleanup
@@ -75,7 +75,7 @@ many of these interfaces.
 
 ## Have fun!
 
-[issue list]: https://bitbucket.org/grouplens/lenskit/issues?status=new&status=open&milestone=2.0
+[issue list]: https://github.com/grouplens/lenskit/issues?milestone=19&state=closed
 [mailing list]: https://wwws.cs.umn.edu/mm-cs/listinfo/lenskit
 
 We hope LensKit 2.0 will be the easiest-to-use version of LensKit yet, but it's still a work-in-progress.
