--- a/content/news/2013-09-02-lenskit-2.md
+++ b/content/news/2013-09-02-lenskit-2.md
@@ -45,4 +45,4 @@ Almost all deprecated APIs have been removed.  This includes many deprecated API
 
 ## Have fun!
 
-We hope you enjoy using this version of LensKit.  If you have problems, please [raise them on the mailing list](https://wwws.cs.umn.edu/mm-cs/listinfo/lenskit) or [report bugs](https://bitbucket.org/grouplens/lenskit/issues).
+We hope you enjoy using this version of LensKit.  If you have problems, please [raise them on the mailing list](https://wwws.cs.umn.edu/mm-cs/listinfo/lenskit) or [report bugs](https://github.com/grouplens/lenskit/issues).
