--- a/_posts/news/2014-07-11-lenskit-2.1.md
+++ b/_posts/news/2014-07-11-lenskit-2.1.md
@@ -23,6 +23,8 @@ A few highlights:
 -   LensKit now uses Gradle to handle its build process.
 
 -   LensKit is now at <http://lenskit.org> and its GitHub page is moved to
-    <http://github.com/lenskit/lenskit>.
+    <http://github.com/lenskit/lenskit>.  The Maven group and Java package are
+    still under `org.grouplens.lenskit`; that will not change until LensKit
+    3.0.
 
 See the [release notes](/releases/lenskit-2.1.html) for more details.
