--- a/_posts/news/2014-07-11-lenskit-2.1.md
+++ b/_posts/news/2014-07-11-lenskit-2.1.md
@@ -23,8 +23,13 @@ A few highlights:
 -   LensKit now uses Gradle to handle its build process.
 
 -   LensKit is now at <http://lenskit.org> and its GitHub page is moved to
-    <http://github.com/lenskit/lenskit>.  The Maven group and Java package are
-    still under `org.grouplens.lenskit`; that will not change until LensKit
+    <http://github.com/lenskit/lenskit>.  Binaries are on [BinTray][].  The
+    Maven group and Java package are still under `org.grouplens.lenskit`; that
+    will not change until LensKit
     3.0.
 
+[BinTray]: https://bintray.com/lenskit/lenskit-releases/lenskit/
+
 See the [release notes](/releases/lenskit-2.1.html) for more details.
+
+The Maven plugin and archetypes will be updated shortly.  They are now managed in a separate repository.
